# Python-Template

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
requirements/: requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.txt
src/module/: intro.py  main.py
tests/: test_intro.py  test_main.py
