[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "module"
requires-python = ">=3.9"
description = "Project Description"
license = { file = "LICENSE" }
readme = {file = "README.md", content-type = "text/markdown"}
authors = [ { email = "author@domain", name = "author" } ]
maintainers = [ { email = "author@domain", name = "author" } ]
keywords = []
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
dev = []
test = []

[project.urls]
homepage = "https://github.com/author/module"
Documentation = "https://github.com/author/module"
Repository = "https://github.com/author/module"
#Changelog = "https://github.com/project-name/blob/master/CHANGELOG.md"

# [project.scripts]
# intro-cli = "module.intro:main"

[tool.hatch.version]
path = "src/module/__about__.py"
