[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "module"
requires-python = ">=3.9"
description = "Project Description"
license = { file = "LICENSE" }
readme = {file = "README.md", content-type = "text/markdown"}
authors = [ { email = "author@domain", name = "author" } ]
maintainers = [ { email = "author@domain", name = "author" } ]
keywords = []
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
dev = [
    "hatch",
    "black",
    "isort",
    "pylint",
    "mypy",
    "bandit",
    "pre-commit"
]
test = [
    "nox",
    "pytest",
    "pytest-cov"
]

[project.urls]
homepage = "https://github.com/author/module"
Documentation = "https://github.com/author/module"
Repository = "https://github.com/author/module"
#Changelog = "https://github.com/project-name/blob/master/CHANGELOG.md"

# [project.scripts]
# intro-cli = "module.intro:main"

[tool.hatch.version]
path = "src/module/__about__.py"

[tool.coverage.run]
omit = ["__about__.py"]

[tool.coverage.report]
fail_under = 100

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint.master]
fail-under = 10.0
ignore-paths = [ "src/module/__about__.py" ]

[tool.pylint.format]
max-line-length = 120

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
implicit_reexport = false
warn_unused_ignores = true
warn_redundant_casts = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
