[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "module"
requires-python = ">=3.9"
description = "Project Description"
license = { file = "LICENSE" }
authors = [
    { email = "author@email.address", name = "author" }
]
maintainers = [
    { email = "author@email.address", name = "author" }
]
keywords = []
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.dynamic.dependencies]
file = ["requirements/requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements/requirements-dev.txt"] }
test = { file = ["requirements/requirements-test.txt"] }

[project.urls]
homepage = "https://github.com/author/module"
Documentation = "https://github.com/author/module"
Repository = "https://github.com/author/module"
Changelog = "https://github.com/author/module/blob/master/CHANGELOG.md"

# [project.scripts]
# module = "module.main:run"

[tool.setuptools.dynamic]
version = {file = "src/module/VERSION"}

[tool.setuptools.package-data]
"module_name" = ["py.typed"]

[tool.pip-tools]
quiet = true
rebuild = true
no-emit-index-url = true
no-header = true
strip-extras = true
annotation-style = "line"

[tool.coverage.report]
fail_under = 100

[tool.black]
line-length = 120
exclude = "src/module/__about__.py"
extend-exclude = ".nox"

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint.master]
fail-under = 10.0
ignore-paths = [ "src/module/__about__.py" ]

[tool.pylint.format]
max-line-length = 120

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
implicit_reexport = false
warn_unused_ignores = true
warn_redundant_casts = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
